<resources>
    <string name="app_name">阿涛方块</string>
    <string name="btn_QuickDown">↡</string>
    <string name="btn_Top">↻</string>
    <string name="btn_Down">⇩</string>
    <string name="btn_Left">⇦</string>
    <string name="btn_Right">⇨</string>
    <string name="record">☸RECORD✭</string>
    <string name="next">❦NEXT☘</string>
    <string name="level">❂LEVEL❁</string>
    <string name="score">✿SCORE❀</string>
    <string name="btn_Start">开始</string>
    <string name="btn_Pause">暂停</string>
    <string name="btn_Music">关音效</string>
    <string name="btn_Change">换肤</string>
    <string name="btn_line">关画线</string>
    <string name="btn_exit">退出</string>
    <string name="pink">粉色</string>
    <string name="blue">蓝色</string>
    <string name="purple">紫色</string>
    <string name="black">黑色</string>
    <string name="yellow">黄色</string>
</resources>
