<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LL_main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/pink_boder">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:paddingTop="3dp"
            android:paddingLeft="3dp"
            android:id="@+id/Fr_Game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </FrameLayout>
        <!--android:paddingLeft="5dp"
            android:paddingTop="5dp"-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:id="@+id/RL_1"
            android:background="@drawable/pink_boder2">

            <Button
                android:id="@+id/btn_Down"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pink_button"
                android:text="@string/btn_Down"
                android:textSize="30sp"
                android:gravity="center"
                android:minHeight="50dp"
                android:minWidth="70dp"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/btn_QuickDown"
                android:text="@string/btn_QuickDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_Down"
                android:background="@drawable/pink_button"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_centerHorizontal="true"
                android:minHeight="50dp"
                android:minWidth="80dp"
                />

            <Button
                android:id="@+id/btn_Top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_Down"
                android:layout_centerHorizontal="true"
                android:minHeight="50dp"
                android:minWidth="80dp"
                android:background="@drawable/pink_button"
                android:gravity="center"
                android:text="@string/btn_Top"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_Left"
                android:text="@string/btn_Left"
                android:layout_toLeftOf="@+id/btn_Down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pink_button"
                android:textSize="30sp"
                android:gravity="center"
                android:minHeight="50dp"
                android:minWidth="63dp"
                android:layout_alignBaseline="@id/btn_Down"/>

            <Button
                android:id="@+id/btn_Right"
                android:text="@string/btn_Right"
                android:layout_toRightOf="@+id/btn_Down"
                android:layout_alignTop="@id/btn_QuickDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pink_button"
                android:textSize="30sp"
                android:gravity="center"
                android:minHeight="50dp"
                android:minWidth="65dp"
                android:layout_alignBaseline="@id/btn_Down"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/LL_1"
        android:background="@drawable/pink_boder">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_RECORD"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#ffff9999"
                    android:text="@string/record"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/tv_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#ffff9999"
                    tools:text="52210"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/tv_LEVEL"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#ffff9999"
                    android:text="@string/level"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/tv_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#ffff9999"
                    tools:text="4"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/tv_SCORE"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#ffff9999"
                    android:text="@string/score"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:textColor="#ffff9999"
                    android:textSize="20dp"
                    tools:text="2048" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RL_2"
                android:background="@drawable/pink_boder">

                <TextView
                    android:id="@+id/tv_NEXT"
                    android:layout_margin="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:textSize="20dp"
                    android:textColor="#ffff9999"
                    android:text="@string/next"/>

            </RelativeLayout>

            <FrameLayout
                android:id="@+id/Fr_Next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:id="@+id/LL_2"
            android:background="@drawable/pink_boder"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_marginTop="5dp"
                        android:id="@+id/btn_Start"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_Start"
                        android:textColor="#ffffffff"
                        style="?android:attr/buttonStyleSmall"
                        android:background="@drawable/blue_button" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_marginTop="5dp"
                        android:id="@+id/btn_Pause"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_Pause"
                        android:textColor="#ffffffff"
                        style="?android:attr/buttonStyleSmall"
                        android:background="@drawable/blue_button"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_marginTop="5dp"
                        android:id="@+id/btn_Music"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_Music"
                        android:textColor="#ffffffff"
                        style="?android:attr/buttonStyleSmall"
                        android:background="@drawable/blue_button" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_marginTop="5dp"
                        android:id="@+id/btn_Chang"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_Change"
                        android:textColor="#ffffffff"
                        style="?android:attr/buttonStyleSmall"
                        android:background="@drawable/blue_button"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_marginTop="5dp"
                        android:id="@+id/btn_Line"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_line"
                        android:textColor="#ffffffff"
                        style="?android:attr/buttonStyleSmall"
                        android:background="@drawable/blue_button" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_marginTop="5dp"
                        android:id="@+id/btn_Exit"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_exit"
                        android:textColor="#ffffffff"
                        style="?android:attr/buttonStyleSmall"
                        android:background="@drawable/blue_button"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>