<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <LinearLayout
        android:id="@+id/LL_PINK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_color_top_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:background="#ffff9999" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/pink"
            android:textColor="#b8b8b8"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#DAD9DB" />
    <!-- 分割线 -->

    <LinearLayout
        android:id="@+id/LL_BLUE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_color_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:background="#6699FF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/blue"
            android:textColor="#b8b8b8"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#DAD9DB" />
    <!-- 分割线 -->

    <LinearLayout
        android:id="@+id/LL_PURPLE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_color_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:background="#CC00FF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/purple"
            android:textColor="#b8b8b8"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#DAD9DB" />
    <!-- 分割线 -->

    <LinearLayout
        android:id="@+id/LL_BLACK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_color_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/black"
            android:textColor="#b8b8b8"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#DAD9DB" />
    <!-- 分割线 -->

    <LinearLayout
        android:id="@+id/LL_YELLOW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_color_bottom_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:background="#FFCC00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/yellow"
            android:textColor="#b8b8b8"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>